<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_camera_node</name>
  <version>0.0.1</version>

  <description>Lucid Camera ROS2 Driver Node</description>
  <author>LUCID Vision Labs</author>
  <maintainer email="support@thinklucid.com">LUCID Vision Labs</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

  <!-- If you have a custom Findarena_sdk.cmake -->
  <depend>arena_sdk</depend>

  <!-- For future Python tools or scripts -->
  <!-- <exec_depend>rclpy</exec_depend> -->

  <!-- Test dependencies (optional) -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
